[FIX] website_sale_loyalty: show discount button in web editor
Since 0750eb6315fe9c2d1f1de36b9b756b5097ed11e0, enabling or disabling the discount subtotal in the
checkout pages is impossible.

Now, the settings will be shown again in the website editor.

opw-3995547

--- a/addons/website_sale_loyalty/i18n/website_sale_loyalty.pot
+++ b/addons/website_sale_loyalty/i18n/website_sale_loyalty.pot
@@ -95,18 +95,13 @@ msgid "Disabled Auto Rewards"
 msgstr ""
 
 #. module: website_sale_loyalty
+#: model_terms:ir.ui.view,arch_db:website_sale_loyalty.cart_discount
+msgid "Discount"
+msgstr ""
+
+#. module: website_sale_loyalty
 #: model:ir.ui.menu,name:website_sale_loyalty.menu_discount_loyalty_type_config
 msgid "Discount & Loyalty"
-msgstr ""
-
-#. module: website_sale_loyalty
-#: model_terms:ir.ui.view,arch_db:website_sale_loyalty.cart_discount
-msgid "Discount:"
-msgstr ""
-
-#. module: website_sale_loyalty
-#: model_terms:ir.ui.view,arch_db:website_sale_loyalty.cart_discount
-msgid "Discounted amount"
 msgstr ""
 
 #. module: website_sale_loyalty
