--- a/addons/l10n_cl/i18n/es_419.po
+++ b/addons/l10n_cl/i18n/es_419.po
@@ -312,6 +312,16 @@ msgid "Foreigner"
 msgstr "Extranjero"
 
 #. module: l10n_cl
+#: model:account.report.line,name:l10n_cl.tax_report_base_compras_combustibles
+msgid "Fuel Purchases (Base)"
+msgstr "Base Compras de Combustibles"
+
+#. module: l10n_cl
+#: model:account.report.line,name:l10n_cl.tax_report_tax_compras_combustibles
+msgid "Fuel Purchases (Tax)"
+msgstr "Impuesto Compras de Combustibles"
+
+#. module: l10n_cl
 #: model:l10n_latam.document.type,report_name:l10n_cl.dc_gd
 msgid "GD"
 msgstr "GD"
@@ -598,6 +608,11 @@ msgstr "Total"
 #: model:uom.uom,name:l10n_cl.product_uom_u
 msgid "U(JGO)"
 msgstr "U(JGO)"
+
+#. module: l10n_cl
+#: model:l10n_latam.document.type,name:l10n_cl.dc_y_f_dte
+msgid "Unaffected or Exempt Electronic Invoice"
+msgstr "Factura no Afecta o Exenta Electrónica"
 
 #. module: l10n_cl
 #: model_terms:ir.ui.view,arch_db:l10n_cl.tax_totals_widget
