--- a/addons/l10n_es_edi_tbai_multi_refund/i18n/es.po
+++ b/addons/l10n_es_edi_tbai_multi_refund/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-02 09:47+0000\n"
-"PO-Revision-Date: 2025-01-02 09:50+0000\n"
+"POT-Creation-Date: 2025-01-28 11:20+0000\n"
+"PO-Revision-Date: 2025-01-28 11:21+0000\n"
 "Last-Translator: Jairo Llopis <jairo@moduon.team>\n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -27,11 +27,11 @@ msgstr "Formato EDI"
 #: model:ir.model.fields,help:l10n_es_edi_tbai_multi_refund.field_account_move__l10n_es_tbai_reversed_ids
 #: model:ir.model.fields,help:l10n_es_edi_tbai_multi_refund.field_account_payment__l10n_es_tbai_reversed_ids
 msgid ""
-"In the case where a vendor refund has multiple original invoices, you can "
-"set them here. "
+"In the case where a refund has multiple original invoices, you can set them "
+"here. "
 msgstr ""
 "Si una rectificación de facturas de proveedor tiene múltiples facturas "
-"originales, puede indicarlas aquí."
+"originales, puede indicarlas aquí. "
 
 #. module: l10n_es_edi_tbai_multi_refund
 #: model:ir.model,name:l10n_es_edi_tbai_multi_refund.model_account_move
@@ -42,5 +42,5 @@ msgstr "Asiento contable"
 #: model:ir.model.fields,field_description:l10n_es_edi_tbai_multi_refund.field_account_bank_statement_line__l10n_es_tbai_reversed_ids
 #: model:ir.model.fields,field_description:l10n_es_edi_tbai_multi_refund.field_account_move__l10n_es_tbai_reversed_ids
 #: model:ir.model.fields,field_description:l10n_es_edi_tbai_multi_refund.field_account_payment__l10n_es_tbai_reversed_ids
-msgid "Refunded Vendor Bills"
-msgstr "Facturas de proveedor rectificadas"
+msgid "Refunded Invoices"
+msgstr "Facturas rectificadas"
