--- a/addons/l10n_es_edi_tbai_multi_refund/i18n/l10n_es_edi_tbai_multi_refund.pot
+++ b/addons/l10n_es_edi_tbai_multi_refund/i18n/l10n_es_edi_tbai_multi_refund.pot
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-17 12:42+0000\n"
-"PO-Revision-Date: 2025-01-17 12:42+0000\n"
+"POT-Creation-Date: 2025-01-28 11:20+0000\n"
+"PO-Revision-Date: 2025-01-28 11:20+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -25,8 +25,8 @@ msgstr ""
 #: model:ir.model.fields,help:l10n_es_edi_tbai_multi_refund.field_account_move__l10n_es_tbai_reversed_ids
 #: model:ir.model.fields,help:l10n_es_edi_tbai_multi_refund.field_account_payment__l10n_es_tbai_reversed_ids
 msgid ""
-"In the case where a vendor refund has multiple original invoices, you can "
-"set them here. "
+"In the case where a refund has multiple original invoices, you can set them "
+"here. "
 msgstr ""
 
 #. module: l10n_es_edi_tbai_multi_refund
@@ -35,13 +35,8 @@ msgid "Journal Entry"
 msgstr ""
 
 #. module: l10n_es_edi_tbai_multi_refund
-#: model_terms:ir.ui.view,arch_db:l10n_es_edi_tbai_multi_refund.view_move_form
-msgid "Refunded Invoices"
-msgstr ""
-
-#. module: l10n_es_edi_tbai_multi_refund
 #: model:ir.model.fields,field_description:l10n_es_edi_tbai_multi_refund.field_account_bank_statement_line__l10n_es_tbai_reversed_ids
 #: model:ir.model.fields,field_description:l10n_es_edi_tbai_multi_refund.field_account_move__l10n_es_tbai_reversed_ids
 #: model:ir.model.fields,field_description:l10n_es_edi_tbai_multi_refund.field_account_payment__l10n_es_tbai_reversed_ids
-msgid "Refunded Vendor Bills"
+msgid "Refunded Invoices"
 msgstr ""
