--- a/addons/account_edi_ubl_cii/i18n/account_edi_ubl_cii.pot
+++ b/addons/account_edi_ubl_cii/i18n/account_edi_ubl_cii.pot
@@ -616,8 +616,7 @@ msgstr ""
 #. odoo-python
 #: code:addons/account_edi_ubl_cii/models/account_move_send.py:0
 msgid ""
-"Please fill in receiver's VAT or Peppol Address to generate a complete XML "
-"file."
+"Please fill in partner's VAT or Peppol Address."
 msgstr ""
 
 #. module: account_edi_ubl_cii
