[IMP] l10n_uy: update translations
[IMP] l10n_latam_invoice_document: update translations

[IMP] l10n_latam_check: update translations

[IMP] l10n_latam_base: update translations

X-original-commit: b24e714044a567b78b8ebf79948c735eefd17179

--- a/addons/l10n_latam_base/i18n/es_419.po
+++ b/addons/l10n_latam_base/i18n/es_419.po
@@ -81,13 +81,16 @@ msgstr ""
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_users__vat
 #: model_terms:ir.ui.view,arch_db:l10n_latam_base.view_partner_latam_form
 msgid "Identification Number"
-msgstr "Número de Identificación"
+msgstr "NIF"
 
 #. module: l10n_latam_base
 #: model:ir.model.fields,help:l10n_latam_base.field_res_partner__vat
 #: model:ir.model.fields,help:l10n_latam_base.field_res_users__vat
 msgid "Identification Number for selected type"
-msgstr "Número de identificación para el tipo seleccionado"
+msgstr ""
+"El número de identificación fiscal. Los valores establecidos aquí se "
+"validarán según el formato del país. Puede utilizar \"/\" para indicar que "
+"el contacto no está sujeto a impuestos."
 
 #. module: l10n_latam_base
 #: model:ir.actions.act_window,name:l10n_latam_base.action_l10n_latam_identification_type
