--- a/addons/l10n_latam_check/i18n/es_419.po
+++ b/addons/l10n_latam_check/i18n/es_419.po
@@ -512,9 +512,9 @@ msgid ""
 "check you are not encoding the same check more than once. List of other "
 "payments/checks: %s"
 msgstr ""
-"Se encontraron otros cheques con el mismo número, emisor y banco. Verifique "
-"que no esté codificando el mismo cheque más de una vez. Lista de otros "
-"pagos/cheques: %s"
+"Otros cheques fueron encontrados con el mismo número, emisor y banco. Por "
+"favor chquear que no estas ingresando el mismo cheque más de una vez. Lista "
+"de otros pagos/cheques: %s"
 
 #. module: l10n_latam_check
 #: model:ir.model.fields,field_description:l10n_latam_check.field_l10n_latam_check__outstanding_line_id
@@ -707,6 +707,7 @@ msgstr "Moneda del pago."
 #. module: l10n_latam_check
 #. odoo-python
 #: code:addons/l10n_latam_check/wizards/l10n_latam_payment_mass_transfer.py:0
+#, python-format
 msgid ""
 "The register payment wizard should only be called on account.payment "
 "records."
@@ -775,8 +776,8 @@ msgid ""
 "You can't use checks when paying invoices of different partners or same "
 "partner without grouping"
 msgstr ""
-"No puede utilizar cheques al pagar facturas de diferentes partners o del "
-"mismo partner sin agrupar"
+"No puede utilizar cheques cuando esta pagando facturas de diferentes "
+"contactos o mismo contacto sin agrupar"
 
 #. module: l10n_latam_check
 #: model_terms:ir.ui.view,arch_db:l10n_latam_check.view_account_payment_form_inherited
