[FIX] google_calendar: change the AttributeError to ValidationError
This error occurs when a user resets their Google Calendar account. As a result,
the authentication token disappears, and if they attempt to reset the account
again, an error is triggered.

Steps to reproduce:
- Install 'google_calendar' module
- Set Google Calendar Credentials in settings.
- Go to Calendar and Sync with Google
- Users > Mitchell Admin > Calendar
- 'Reset Account' > 'Confirm' (keep the selections as default)
- Again 'Reset Account' > 'User's Existing Events: Delete from Both'

Stack Trace:
AttributeError: An authentication token is required

Due to an AttributeError, users are seeing an error message in the stack trace
instead of a user-friendly notification.

sentry-6311340556

--- a/addons/google_calendar/i18n/google_calendar.pot
+++ b/addons/google_calendar/i18n/google_calendar.pot
@@ -62,6 +62,12 @@ msgstr ""
 
 #. module: google_calendar
 #. odoo-python
+#: code:addons/google_calendar/utils/google_calendar.py:0
+msgid "An authentication token is required"
+msgstr ""
+
+#. module: google_calendar
+#. odoo-python
 #: code:addons/google_calendar/models/res_users_settings.py:0
 msgid ""
 "An error occurred while generating the token. Your authorization code may be"
