[17.0][IMP] payment: traducciones

--- a/addons/payment/i18n/es.po
+++ b/addons/payment/i18n/es.po
@@ -530,7 +530,7 @@ msgstr "Elige un método de pago"
 #. module: payment
 #: model_terms:ir.ui.view,arch_db:payment.form
 msgid "Choose another method <i class=\"oi oi-arrow-down\"/>"
-msgstr "Elija otro método <i class=\"oi oi-arrow-down\"/>"
+msgstr "Elegir otro método <i class=\"oi oi-arrow-down\"/>"
 
 #. module: payment
 #: model:ir.model.fields,field_description:payment.field_payment_transaction__partner_city
@@ -975,7 +975,7 @@ msgstr ""
 #. module: payment
 #: model_terms:ir.ui.view,arch_db:payment.portal_my_home_payment
 msgid "Manage your payment methods"
-msgstr "Gestione sus métodos de pago"
+msgstr "Gestiona tus métodos de pago"
 
 #. module: payment
 #: model:ir.model.fields.selection,name:payment.selection__res_company__payment_onboarding_payment_method__manual
@@ -2327,7 +2327,7 @@ msgstr "Aún no se ha procesado su pago."
 #. module: payment
 #: model_terms:ir.ui.view,arch_db:payment.form
 msgid "Your payment methods"
-msgstr "Sus métodos de pago"
+msgstr "Tus métodos de pago"
 
 #. module: payment
 #: model_terms:ir.ui.view,arch_db:payment.payment_transaction_form
