--- a/addons/portal/i18n/es.po
+++ b/addons/portal/i18n/es.po
@@ -36,7 +36,7 @@ msgstr "%s días de retraso"
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_my_security
 msgid "1. Enter your password to confirm you own this account"
-msgstr "1. Ingrese su contraseña para confirmar que es dueño de esta cuenta"
+msgstr "1. Introduce tu contraseña para confirmar que esta cuenta te pertenece"
 
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_my_security
@@ -110,8 +110,8 @@ msgid ""
 "            </small>"
 msgstr ""
 "<small class=\"form-text text-muted\">\n"
-"                No puede cambiar el nombre de la empresa, el número de identificación fiscal y el país una vez que emitió documentos para su cuenta.\n"
-"                <br/>Póngase en contacto con nosotros para realizar esta operación.\n"
+"                No puedes cambiar el nombre de la empresa, el número de identificación fiscal ni el país una vez se han emitido documentos para tu cuenta.\n"
+"                <br/>Ponte en contacto con nosotros si necesitas modificar alguno de estos datos.\n"
 "            </small>"
 
 #. module: portal
@@ -670,7 +670,7 @@ msgstr "Introduce la descripción y propósito de la clave."
 #: code:addons/portal/static/src/xml/portal_security.xml:0
 #, python-format
 msgid "Forgot password?"
-msgstr "¿Olvidó su contraseña?"
+msgstr "¿Has olvidado tu contraseña?"
 
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_my_security
@@ -978,7 +978,7 @@ msgstr "Teléfono"
 #: code:addons/portal/static/src/xml/portal_security.xml:0
 #, python-format
 msgid "Please enter your password to confirm you own this account"
-msgstr "Ingrese su contraseña para confirmar que esta cuenta le pertenece"
+msgstr "Introduce tu contraseña para confirmar que esta le pertenece"
 
 #. module: portal
 #. odoo-python
