[17.0][IMP] website_sale: traducciones

--- a/addons/website_sale/i18n/es.po
+++ b/addons/website_sale/i18n/es.po
@@ -48,7 +48,7 @@ msgstr "%s reseñas"
 #. module: website_sale
 #: model_terms:ir.ui.view,arch_db:website_sale.address_on_payment
 msgid "&amp; Shipping"
-msgstr "&amp; Envío"
+msgstr "y Envío"
 
 #. module: website_sale
 #: model_terms:ir.ui.view,arch_db:website_sale.address
@@ -845,7 +845,7 @@ msgstr "Calificación promedio"
 #: code:addons/website_sale/models/website.py:0
 #, python-format
 msgid "Back to cart"
-msgstr "Regresar a la cesta"
+msgstr "Volver a la cesta"
 
 #. module: website_sale
 #: model_terms:ir.ui.view,arch_db:website_sale.snippet_options
@@ -910,7 +910,7 @@ msgstr "Grande"
 #: model_terms:ir.ui.view,arch_db:website_sale.address_on_payment
 #: model_terms:ir.ui.view,arch_db:website_sale.checkout
 msgid "Billing"
-msgstr "Facturación"
+msgstr "Dirección de facturación"
 
 #. module: website_sale
 #: model_terms:ir.ui.view,arch_db:website_sale.address
@@ -3953,7 +3953,7 @@ msgstr "Texto para mostrar en lugar de precio"
 #. module: website_sale
 #: model_terms:ir.ui.view,arch_db:website_sale.confirmation
 msgid "Thank you for your order."
-msgstr "Gracias por su pedido."
+msgstr "Gracias por tu pedido."
 
 #. module: website_sale
 #: model_terms:ir.ui.view,arch_db:website_sale.brand_promotion
