[FIX] purchase: prevent error when print a purchase quotation report
Currently, an error occurs when printing the purchase quotation report,
and external id not available of it.

Steps to produce:

- Install the 'purchase' module.
- Enable debug mode.
- Go to Settings / Technical / Actions / Reports, and delete the report name
'Request for Quotation'.
- Create a new purchase order and add a customer.
- Click on 'Print RFQ'.

ValueError: External ID not found in the system:
purchase.report_purchase_quotation

An error occurs when the system tries to retrieve an external ID of the
'Request for Quotation' report at [1], but it has been deleted.

Link [1]: https://github.com/odoo/odoo/blob/8ec4108b978f00b0a373a28f602780d87aa0d000/addons/purchase/models/purchase_order.py#L488

To resolve this issue, restrict the deletion of the 'Request for Quotation'
report from the ir actions, To ensure that users cannot delete it (except
during the module uninstallation).

Sentry-6337362999

--- a/addons/purchase/i18n/purchase.pot
+++ b/addons/purchase/i18n/purchase.pot
@@ -3120,6 +3120,13 @@ msgid ""
 msgstr ""
 
 #. module: purchase
+#. odoo-python
+#: code:addons/purchase/models/ir_actions_actions.py:0
+#, python-format
+msgid "You cannot delete %s"
+msgstr ""
+
+#. module: purchase
 #: model_terms:ir.actions.act_window,help:purchase.product_product_action
 msgid ""
 "You must define a product for everything you sell or purchase,\n"
