[IMP] l10n_gcc_invoice*, l10n_sa*, l10n_ae*, l10n_bh, l10n_kw, l10n_om, l10n_qa: Improve l10n_gcc_invoice report
Previously the l10n_gcc_invoice module had its own invoice report document and all inheriting modules were extending it
rather than inheriting with primary=true. this caused issues since sometimes due to having multiple companies setup in different gcc countries.
it also made it hard to customize the reports for one gcc country without affecting the other gcc countries.

dual language reports were also mandatory without an option to deactivate them when installing l10n_gcc_invoice.

This commit changes the l10n_gcc_invoice to inherit from standard, and all inheriting modules will inherit the l10n_gcc_invoice document
with primary=true. dual language is also an option for pos receipts & invoice documents that can be set on the settings.

task-4656705

closes odoo/odoo#220167

Related: odoo/upgrade#8209
Signed-off-by: Florian Gilbert (flg) <flg@odoo.com>

--- a/addons/l10n_sa_edi/i18n/l10n_sa_edi.pot
+++ b/addons/l10n_sa_edi/i18n/l10n_sa_edi.pot
@@ -134,26 +134,6 @@ msgid "<i class=\"fa fa-warning me-2\"/> Warning"
 msgstr ""
 
 #. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<span class=\"fw-bold\">Exchange Rate</span>"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<span class=\"fw-bold\">Subtotal</span>"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<span class=\"fw-bold\">Total</span>"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<span class=\"fw-bold\">VAT Amount</span>"
-msgstr ""
-
-#. module: l10n_sa_edi
 #: model_terms:ir.ui.view,arch_db:l10n_sa_edi.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Production</span> - Live environment"
 msgstr ""
@@ -169,26 +149,6 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:l10n_sa_edi.res_config_settings_view_form
 msgid ""
 "<span class=\"o_form_label\">Simulation</span> - Unique testing environment"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<strong>الإجمالي الفرعي بالريال السعودي</strong>"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<strong>الإجمالي بالريال السعودي</strong>"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<strong>سعر الصرف</strong>"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "<strong>مبلغ ضريبة القيمة المضافة بالريال السعودي</strong>"
 msgstr ""
 
 #. module: l10n_sa_edi
@@ -283,6 +243,11 @@ msgid "Companies"
 msgstr ""
 
 #. module: l10n_sa_edi
+#: model:ir.model,name:l10n_sa_edi.model_base_document_layout
+msgid "Company Document Layout"
+msgstr ""
+
+#. module: l10n_sa_edi
 #: model:ir.model.fields,help:l10n_sa_edi.field_account_journal__l10n_sa_compliance_csid_json
 msgid ""
 "Compliance CSID data received from the Compliance CSID API in dumped json "
@@ -349,6 +314,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_account_move_line__display_name
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_account_move_send__display_name
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_account_tax__display_name
+#: model:ir.model.fields,field_description:l10n_sa_edi.field_base_document_layout__display_name
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_certificate_certificate__display_name
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_ir_attachment__display_name
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_l10n_sa_edi_otp_wizard__display_name
@@ -426,6 +392,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_account_move_line__id
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_account_move_send__id
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_account_tax__id
+#: model:ir.model.fields,field_description:l10n_sa_edi.field_base_document_layout__id
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_certificate_certificate__id
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_ir_attachment__id
 #: model:ir.model.fields,field_description:l10n_sa_edi.field_l10n_sa_edi_otp_wizard__id
@@ -709,6 +676,14 @@ msgstr ""
 
 #. module: l10n_sa_edi
 #. odoo-python
+#: code:addons/l10n_sa_edi/models/account_move.py:0
+msgid ""
+"Please make sure that the invoice company matches the journal company on all"
+" invoices you wish to confirm"
+msgstr ""
+
+#. module: l10n_sa_edi
+#. odoo-python
 #: code:addons/l10n_sa_edi/wizard/l10n_sa_edi_otp_wizard.py:0
 msgid "Please provide an OTP to complete the onboarding process"
 msgstr ""
@@ -789,7 +764,8 @@ msgid "Set whether the system should use the Production API"
 msgstr ""
 
 #. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
+#. odoo-python
+#: code:addons/l10n_sa_edi/models/account_move.py:0
 msgid "Simplified Tax Invoice"
 msgstr ""
 
@@ -864,11 +840,6 @@ msgstr ""
 #. module: l10n_sa_edi
 #: model:ir.model.fields.selection,name:l10n_sa_edi.selection__res_partner__l10n_sa_edi_additional_identification_scheme__tin
 msgid "Tax Identification Number"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "Tax Invoice"
 msgstr ""
 
 #. module: l10n_sa_edi
@@ -999,7 +970,6 @@ msgstr ""
 
 #. module: l10n_sa_edi
 #: model:ir.model.fields.selection,name:l10n_sa_edi.selection__account_tax__l10n_sa_exemption_reason_code__vatex-sa-34-2
-#: model:ir.model.fields.selection,name:l10n_sa_edi.selection__account_tax_template__l10n_sa_exemption_reason_code__vatex-sa-34-2
 msgid "VATEX-SA-34-2 The international transport of Passengers."
 msgstr ""
 
@@ -1163,14 +1133,4 @@ msgstr ""
 #. module: l10n_sa_edi
 #: model_terms:ir.ui.view,arch_db:l10n_sa_edi.export_sa_zatca_ubl_extensions
 msgid "urn:oasis:names:specification:ubl:signature:Invoice"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "فاتورة ضريبية"
-msgstr ""
-
-#. module: l10n_sa_edi
-#: model_terms:ir.ui.view,arch_db:l10n_sa_edi.arabic_english_invoice
-msgid "فاتورة ضريبية مبسطة"
 msgstr ""
