--- a/addons/l10n_tr_nilvera_einvoice/i18n/tr.po
+++ b/addons/l10n_tr_nilvera_einvoice/i18n/tr.po
@@ -4,11 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 18.4a1+e\n"
+"Project-Id-Version: Odoo Server saas~18.4+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-17 09:29+0000\n"
-"PO-Revision-Date: 2025-07-17 09:29+0000\n"
-
+"POT-Creation-Date: 2025-09-08 08:47+0000\n"
+"PO-Revision-Date: 2025-09-08 08:47+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -17,9 +16,34 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aboneno
+msgid "ABONENO"
+msgstr "ABONENO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aracikurumetiket
+msgid "ARACIKURUMETIKET"
+msgstr "ARACIKURUMETIKET"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aracikurumvkn
+msgid "ARACIKURUMVKN"
+msgstr "ARACIKURUMVKN"
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_move_send
 msgid "Account Move Send"
 msgstr "Hesap Hareketi Yollandı"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_bayino
+msgid "BAYINO"
+msgstr "BAYINO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ciftcino
+msgid "CIFTCINO"
+msgstr "CIFTCINO"
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
@@ -48,6 +72,12 @@ msgstr "Fatura(lar)daki Verileri Kontrol Edin"
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid "Check data on Partner(s)"
+msgstr "Ortak(lar) üzerindeki verileri kontrol edin"
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check e-Invoice Format or Nilvera Status on Partner(s)"
 msgstr "Ortak(lar) üzerindeki e-Fatura Formatını veya Nilvera Durumunu Kontrol Edin"
 
@@ -64,12 +94,34 @@ msgid "Check reference on Partner(s)"
 msgstr "Ortak(lar) üzerindeki referansı kontrol edin"
 
 #. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid "Check tags on company(s)"
+msgstr "Şirket(ler) üzerindeki etiketleri kontrol edin"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_distributorno
+msgid "DISTRIBUTORNO"
+msgstr "DISTRIBUTORNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_dosyano
+msgid "DOSYANO"
+msgstr "DOSYANO"
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_edi_xml_ubl_tr__display_name
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_journal__display_name
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move__display_name
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__display_name
+#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_res_partner_category__display_name
 msgid "Display Name"
 msgstr "Görünüm Adı"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_epdkno
+msgid "EPDKNO"
+msgstr "EPDKNO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields.selection,name:l10n_tr_nilvera_einvoice.selection__account_move__l10n_tr_nilvera_send_status__error
@@ -77,12 +129,28 @@ msgid "Error"
 msgstr "Hata"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_hastano
+msgid "HASTANO"
+msgstr "HASTANO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_hizmetno
+msgid "HIZMETNO"
+msgstr "HIZMETNO"
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_edi_xml_ubl_tr__id
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_journal__id
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move__id
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__id
+#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_res_partner_category__id
 msgid "ID"
 msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_imalatcino
+msgid "IMALATCINO"
+msgstr "IMALATCINO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_journal
@@ -95,10 +163,25 @@ msgid "Journal Entry"
 msgstr "Yevmiye Kaydı"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_mersisno
+msgid "MERSISNO"
+msgstr "MERSISNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_musterino
+msgid "MUSTERINO"
+msgstr "MUSTERINO"
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_uuid
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move__l10n_tr_nilvera_uuid
 msgid "Nilvera Document UUID"
 msgstr "Nilvera Belge UUID'si"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model_terms:ir.ui.view,arch_db:l10n_tr_nilvera_einvoice.account_journal_dashboard_kanban_view
+msgid "Sync Nilvera Invoices"
+msgstr "Nilvera Faturalarını Senkronize Et"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_send_status
@@ -140,6 +223,35 @@ msgstr ""
 "başka bir API anahtarı deneyin veya Nilvera ile iletişime geçin."
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_pasaportno
+msgid "PASAPORTNO"
+msgstr "PASAPORTNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:ir.model,name:l10n_tr_nilvera_einvoice.model_res_partner_category
+msgid "Partner Tags"
+msgstr "Ortak Etiketleri"
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid ""
+"Please ensure that your company contact has either the 'MERSISNO' or "
+"''TICARETSICILNO' tag with a value assigned."
+msgstr "Lütfen şirket kontaktınızda 'MERSISNO' veya "
+"'TICARETSICILNO' etiketinin değerle birlikte ekli olduğundan emin olun."
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_sayacno
+msgid "SAYACNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_subeno
+msgid "SUBENO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields.selection,name:l10n_tr_nilvera_einvoice.selection__account_move__l10n_tr_nilvera_send_status__sent
 msgid "Sent and waiting response"
 msgstr "Gönderildi ve yanıt bekleniyor"
@@ -154,6 +266,26 @@ msgstr "Nilvera'dan sunucu hatası, lütfen daha sonra tekrar deneyin."
 #: model:ir.model.fields.selection,name:l10n_tr_nilvera_einvoice.selection__account_move__l10n_tr_nilvera_send_status__succeed
 msgid "Successful"
 msgstr "Başarılı"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_tapdkno
+msgid "TAPDKNO"
+msgstr "TAPDKNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_telefonno
+msgid "TELEFONNO"
+msgstr "TELEFONNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_tesisatno
+msgid "TESISATNO"
+msgstr "TESISATNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ticaretsicilno
+msgid "TICARETSICILNO"
+msgstr "TICARETSICILNO"
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
@@ -255,6 +387,11 @@ msgstr "Fatura durumu Nilvera'dan alınamadı."
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_edi_xml_ubl_tr
 msgid "UBL-TR 1.2"
 msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ureticino
+msgid "URETICINO"
+msgstr "URETICINO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,help:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_uuid
