[FIX] web_editor: no WebP quality change on safari
Scenario:

- select a WebP image in the editor with safari
- change the quality with the slider

Result:

- the size and the image quality don't change

Cause:

Safari doesn't support HTMLCanvasElement.toDataURL() with WebP, so the
image is exported in PNG instead which is lossless and doesn't support
compression.

Fix:

Disable the quality for WebP images if this is not supported (in safari
+ iOS webview) and display a message.

opw-4979378

closes odoo/odoo#224342

closes odoo/odoo#224360

X-original-commit: 47f0be59457e24937eb4b5c1fc191575f473e18b
Signed-off-by: Quentin Smetz (qsm) <qsm@odoo.com>
Signed-off-by: Nicolas Lempereur (nle) <nle@odoo.com>

--- a/addons/html_builder/i18n/html_builder.pot
+++ b/addons/html_builder/i18n/html_builder.pot
@@ -3024,6 +3024,11 @@ msgstr ""
 #. odoo-javascript
 #: code:addons/html_builder/static/src/plugins/background_option/background_shapes_definition.js:0
 msgid "Wavy 14"
+
+#. module: html_builder
+#. odoo-javascript
+#: code:addons/html_builder/static/src/plugins/image/image_format_option.xml:0
+msgid "WebP compression not supported on this browser"
 msgstr ""
 
 #. module: html_builder
