--- a/addons/html_builder/i18n/html_builder.pot
+++ b/addons/html_builder/i18n/html_builder.pot
@@ -3033,6 +3033,11 @@ msgstr ""
 #. odoo-javascript
 #: code:addons/html_builder/static/src/plugins/background_option/background_shapes_definition.js:0
 msgid "Wavy 14"
+
+#. module: html_builder
+#. odoo-javascript
+#: code:addons/html_builder/static/src/plugins/image/image_format_option.xml:0
+msgid "WebP compression not supported on this browser"
 msgstr ""
 
 #. module: html_builder
