[IMP] l10n_es_edi_facturae: add Factura-e XML download option
In this commit:
- Added `Factura-e XML` download option to invoice form and list views.

Task-5026439

--- a/addons/l10n_es_edi_facturae/i18n/l10n_es_edi_facturae.pot
+++ b/addons/l10n_es_edi_facturae/i18n/l10n_es_edi_facturae.pot
@@ -368,6 +368,12 @@ msgid "Facturae EDI Residency Type Code"
 msgstr ""
 
 #. module: l10n_es_edi_facturae
+#. odoo-python
+#: code:addons/l10n_es_edi_facturae/models/account_move.py:0
+msgid "Factura-e XML"
+msgstr ""
+
+#. module: l10n_es_edi_facturae
 #: model:ir.model.fields,field_description:l10n_es_edi_facturae.field_res_company__l10n_es_edi_facturae_certificate_ids
 msgid "Facturae EDI signing certificate"
 msgstr ""
