[FIX] l10n_tr_nilvera*: UBL structure & compliance errors
Negative invoice lines are not not compliant with turkish e-invoicing regulations so a blocking error is raised when negative lines are present.

Previously when only account was installed without account_accountant an access right error would show due to the model 'l10n_tr.nilvera.alias'
being accessible by account_accountant groups. now the model is also accessible by groups defined in the account module.

Removed standard_item_identification_vals from tr ubl structure and switched the sellers_item_identification_vals to use product barcode

task-4907751

X-original-commit: b9662b3f1afb66baf35aaa112f4824f5145e2f16

--- a/addons/l10n_tr_nilvera_einvoice/i18n/tr.po
+++ b/addons/l10n_tr_nilvera_einvoice/i18n/tr.po
@@ -120,6 +120,15 @@ msgid "Nilvera: retrieve invoice status"
 msgstr "Nilvera: fatura durumunu al"
 
 #. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_edi_xml_ubl_tr.py:0
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid ""
+"Nilvera portal cannot process negative quantity nor negative price on "
+"invoice lines"
+msgstr "Nilvera portalı, fatura satırlarında negatif miktar veya negatif fiyat işleyemez."
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.actions.server,name:l10n_tr_nilvera_einvoice.ir_cron_nilvera_get_new_documents_ir_actions_server
 msgid "Nilvera: retrieve new documents"
 msgstr "Nilvera: yeni belgeler alın"
