[IMP] core: support lazy translation as legal write value
before this commit,
1. lang=None in context or env is not equivalent to lang='en_US'
2. record is not considered which causes lazy translation object cannot
be correctly stringified in field.convert_to_cache

after this commit,
1. for valid context, env, lang=None is equivalent to lang='en_US'
2. lazy translation objects can be correctly stringified in
field.convert_to_cache with lang in record.env

--- a/odoo/addons/test_orm/i18n/fr.po
+++ b/odoo/addons/test_orm/i18n/fr.po
@@ -20,3 +20,15 @@ msgstr ""
 #: model:ir.model.constraint,message:test_orm.constraint_test_orm_category_positive_color
 msgid "The color code must be positive !"
 msgstr "La couleur doit être une valeur positive !"
+
+#. module: test_orm
+#. odoo-python
+#: code:addons/test_orm/tests/test_fields.py:0
+msgid "lazy_translation_1_en"
+msgstr "lazy_translation_1_fr"
+
+#. module: test_orm
+#. odoo-python
+#: code:addons/test_orm/tests/test_fields.py:0
+msgid "lazy_translation_2_en"
+msgstr "lazy_translation_2_fr"
