--- a/odoo/addons/test_orm/i18n/test_orm.pot
+++ b/odoo/addons/test_orm/i18n/test_orm.pot
@@ -19,3 +19,15 @@ msgstr ""
 #: model:ir.model.constraint,message:test_orm.constraint_test_orm_category_positive_color
 msgid "The color code must be positive !"
 msgstr ""
+
+#. module: test_orm
+#. odoo-python
+#: code:addons/test_orm/tests/test_fields.py:0
+msgid "lazy_translation_1_en"
+msgstr ""
+
+#. module: test_orm
+#. odoo-python
+#: code:addons/test_orm/tests/test_fields.py:0
+msgid "lazy_translation_2_en"
+msgstr ""
