--- a/addons/account_peppol/i18n/account_peppol.pot
+++ b/addons/account_peppol/i18n/account_peppol.pot
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 18.0\n"
+"Project-Id-Version: Odoo Server 18.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-12 01:50+0000\n"
-"PO-Revision-Date: 2025-09-12 01:50+0000\n"
+"POT-Creation-Date: 2025-10-07 11:01+0000\n"
+"PO-Revision-Date: 2025-10-07 11:01+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1167,7 +1167,10 @@ msgstr ""
 
 #. module: account_peppol
 #: model_terms:ir.ui.view,arch_db:account_peppol.res_config_settings_view_form
-msgid "invoices and credit notes."
+msgid ""
+"invoices and credit notes\n"
+"                            <span invisible="account_peppol_edi_mode != 'demo'">(demo)</span>\n"
+"                            <span invisible="account_peppol_edi_mode != 'demo'">(test)</span>."
 msgstr ""
 
 #. module: account_peppol
